Updated website code and content

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
 </h1>
     <a href="/reservation.html" class="hero-btn">
      RESERVATIONS
-      <span class="chili">🌶️</span>
     </a>
   </div>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Pacifico&display=swap" rel="stylesheet">
@@ -95,7 +94,7 @@
            We cook fresh entrées on slow charcoal to ensure rich and authentic flavors. The India Restaurant is the perfect relaxing place for a quick lunch, takeaway, or a romantic dinner.
       </p>
       <a href="reservation.html" class="experience-btn">
-        BOOK A TABLE <span>🌶️</span>
+        BOOK A TABLE 
       </a>
     </div>
 
@@ -121,7 +120,7 @@
     <h2>SIGNATURE MENU</h2>
 
     <a href="menu.html" class="menu-btn">
-      VIEW MENU<span>🌶️</span>
+      VIEW MENU
     </a>
   </div>
 </section>
@@ -145,7 +144,7 @@
       </p>
 
       <a href="menu.html" class="pisco-btn">
-        ORDER ONLINE <span>🌶️</span>
+        ORDER ONLINE 
       </a>
     </div>
 
@@ -223,17 +222,15 @@
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-about">
-        <img src="./Resources/logo.png" alt="logo">
-        <p>
+       <a href="index.html">
+    <img src="./Resources/logo.png" alt="The India Restaurant & Bar Logo">
+         </a>     
+           <p>
           You can order online from us by visiting www.theindiarestaurant.co.nz and 
           we will deliver our delicious food directly to your doorstep.
         </p>
-        <div class="socials">
-          <i class="fab fa-facebook-f"> facebook</i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-twitter"></i>
-        </div>
-        <a href="reservation.html" class="footer-btn">BOOK A TABLE 🌶️</a>
+        
+        <a href="reservation.html" class="footer-btn">BOOK A TABLE</a>
       </div>
 
       <div class="footer-contact">
@@ -256,7 +253,7 @@
     </div>
 
     <div class="footer-bottom">
-      2026 DEVELOPED AND DESIGNED BY <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
+      © 2026 DEVELOPED AND DESIGNED BY <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
     </div>
   </footer>
 </section>
