--- a/location.html
+++ b/location.html
@@ -1,231 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Location | The India Restaurant & Bar</title>
 
-    <link rel="stylesheet" href="location.css" />
-  </head>
-  <body>
-    <!-- ================= HEADER ================= -->
-    <header class="site-header">
-      <nav class="nav-container">
-        <!-- DESKTOP LEFT -->
-        <ul class="nav-left">
-          <li class="nav-dropdown">
-            <a href="#">HOME</a>
-            <ul class="dropdown-menu">
-              <li><a href="index.html">MAIN HOME</a></li>
-              <li><a href="menu.html">MENU</a></li>
-            </ul>
-          </li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-        </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Location | The India Restaurant & Bar</title>
 
-        <!-- LOGO -->
-        <div class="logo">
-          <a href="index.html">
-            <img src="./Resources/logoo.png" alt="The India Restaurant & Bar" />
-          </a>
-        </div>
+  <link rel="stylesheet" href="location.css" />
+</head>
 
-        <!-- DESKTOP RIGHT -->
-        <ul class="nav-right">
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
+<body>
+  <!-- ================= HEADER ================= -->
+  <header class="site-header">
+    <nav class="nav-container">
+      <!-- DESKTOP LEFT -->
+      <ul class="nav-left">
+        <li class="nav-dropdown">
+          <a href="#">HOME</a>
+          <ul class="dropdown-menu">
+            <li><a href="index.html">MAIN HOME</a></li>
+            <li><a href="menu.html">MENU</a></li>
+          </ul>
+        </li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+      </ul>
 
-        <!-- HAMBURGER -->
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <!-- MOBILE MENU -->
-        <ul class="mobile-menu">
-          <li class="mobile-dropdown">
-            <a href="#" id="mobileHome">HOME</a>
-            <ul class="mobile-submenu">
-              <li><a href="index.html">MAIN HOME</a></li>
-              <li><a href="menu.html">MENU</a></li>
-            </ul>
-          </li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <!-- HERO SECTION -->
-    <section class="hero">
-      <img
-        src="./Resources/bg.jpg"
-        alt="Restaurant Background"
-        class="hero-bg"
-      />
-
-      <div class="hero-overlay"></div>
-
-      <div class="hero-content">
-        <p class="hero-tagline">“One Table · A Whole Journey”</p>
-        <h1 class="hero-title">The India Restaurant & Bar Tuakau and Pokeno</h1>
-        <a href="/reservation.html" class="hero-btn">
-          RESERVATIONS
-          <span class="chili"></span>
+      <!-- LOGO -->
+      <div class="logo">
+        <a href="index.html">
+          <img src="./Resources/logoo.png" alt="The India Restaurant & Bar" />
         </a>
       </div>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Pacifico&display=swap"
-        rel="stylesheet"
-      />
-    </section>
 
-    <section class="contact-section">
-      <h2 class="contact-title">LOCATION ON MAP</h2>
+      <!-- DESKTOP RIGHT -->
+      <ul class="nav-right">
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
 
-      <div class="contact-container">
-        <!-- LEFT : CONTACT INFO WITH BG IMAGE -->
-        <div class="contact-info">
-          <div class="contact-overlay">
-            <h4>Tuakau Branch</h4>
-            <p>
-              37 B George Street<br />
-              Tuakau<br />
-              Auckland
-            </p>
-
-            <h4>Contact</h4>
-            <p>09-236 9800</p>
-
-            <h4>Hours</h4>
-            <p>
-              Monday : Closed<br /><br />
-              Tuesday – Sunday : 11:30am – 02:00pm<br />
-              Tuesday – Sunday : 04:00pm – 10:00pm
-            </p>
-          </div>
-        </div>
-
-        <!-- RIGHT : GOOGLE MAP -->
-        <div class="contact-map">
-          <iframe
-            src="https://www.google.com/maps?q=The%20India%20Restaurant%20%26%20Bar%20Tuakau&output=embed"
-            loading="lazy"
-            allowfullscreen
-          >
-          </iframe>
-        </div>
+      <!-- HAMBURGER -->
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-      <div class="contact-container">
-        <!-- LEFT : CONTACT INFO -->
-        <div class="contact-info">
-          <div class="contact-overlay">
-            <h4>Pukekohe Branch</h4>
-            <p>
-              130 King Street<br />
-              Pukekohe 2120<br />
-              New Zealand
-            </p>
 
-            <h4>Contact</h4>
-            <p>+64 9 947 8700</p>
+      <!-- MOBILE MENU -->
+      <ul class="mobile-menu">
+        <li class="mobile-dropdown">
+          <a href="#" id="mobileHome">HOME</a>
+          <ul class="mobile-submenu">
+            <li><a href="index.html">MAIN HOME</a></li>
+            <li><a href="menu.html">MENU</a></li>
+          </ul>
+        </li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
 
-            <h4>Hours</h4>
-            <p>
-              Monday : 4:00pm – 9:30pm<br /><br />
+  <!-- HERO SECTION -->
+  <section class="hero">
 
-              Tuesday & Wednesday :<br />
-              11:30am – 2:00pm, 4:00pm – 9:30pm<br /><br />
-            </p>
-          </div>
-        </div>
+    <!-- HERO SLIDER -->
+    <div class="hero-slider">
+      <img src="./Resources/slide1.jpg" class="hero-slide active" alt="Restaurant Image 1">
+      <img src="./Resources/slide2.jpg" class="hero-slide" alt="Restaurant Image 2">
 
-        <!-- RIGHT : MAP -->
-        <div class="contact-map">
-          <iframe
-            src="https://www.google.com/maps?q=The%20India%20Restaurant%20and%20Bar%20Pukekohe&output=embed"
-            loading="lazy"
-            allowfullscreen
-          >
-          </iframe>
-        </div>
-      </div>
-      <div class="contact-container">
-        <!-- LEFT : CONTACT INFO -->
-        <div class="contact-info">
-          <div class="contact-overlay">
-            <h4>Pokeno Branch</h4>
-            <p>
-              42 McDonald Road<br />
-              Pokeno<br />
-              Auckland 2402
-            </p>
+      <button class="slider-arrow left" aria-label="Previous slide">&#10094;</button>
+      <button class="slider-arrow right" aria-label="Next slide">&#10095;</button>
+    </div>
 
-            <h4>Contact</h4>
-            <p>09 233 6999</p>
+    <div class="hero-overlay"></div>
 
-            <h4>Hours</h4>
-            <p>Monday – Sunday : 4:00pm – 10:00pm</p>
-          </div>
-        </div>
+    <div class="hero-content">
+      <p class="hero-tagline">“One Table · A Whole Journey”</p>
+      <h1 class="hero-title">
+        The India Restaurant & Bar Tuakau and Pokeno
+      </h1>
+      <a href="/reservation.html" class="hero-btn">
+        RESERVATIONS
+      </a>
+    </div>
 
-        <!-- RIGHT : MAP -->
-        <div class="contact-map">
-          <iframe
-            src="https://www.google.com/maps?q=The%20India%20Restaurant%20and%20Bar%20Pokeno&output=embed"
-            loading="lazy"
-            allowfullscreen
-          >
-          </iframe>
-        </div>
-      </div>
-    </section>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Pacifico&display=swap"
+      rel="stylesheet">
+  </section>
 
-    <!-- ================= FOOTER ================= -->
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-about">
-          <a href="index.html">
-            <img
-              src="./Resources/logo.png"
-              alt="The India Restaurant & Bar Logo"
-            />
-          </a>
+  <section class="contact-section">
+    <h2 class="contact-title">LOCATION ON MAP</h2>
+
+    <div class="contact-container">
+      <!-- LEFT : CONTACT INFO WITH BG IMAGE -->
+      <div class="contact-info">
+        <div class="contact-overlay">
+          <h4>Tuakau Branch</h4>
           <p>
-            You can order online from us by visiting
-            www.theindiarestaurant.co.nz and we will deliver our delicious food
-            directly to your doorstep.
+            37 B George Street<br />
+            Tuakau<br />
+            Auckland
           </p>
 
-          <a href="reservation.html" class="footer-btn">BOOK A TABLE</a>
+          <h4>Contact</h4>
+          <p>09-236 9800</p>
+
+          <h4>Hours</h4>
+          <p>
+            Monday : Closed<br /><br />
+            Tuesday – Sunday : 11:30am – 02:00pm<br />
+            Tuesday – Sunday : 04:00pm – 10:00pm
+          </p>
         </div>
+      </div>
 
-        <div class="footer-contact">
-          <h4>Tuakau Branch</h4>
-          <p>37 B George Street Tuakau Auckland</p>
-          <p>09 233 6999</p>
+      <!-- RIGHT : GOOGLE MAP -->
+      <div class="contact-map">
+        <iframe src="https://www.google.com/maps?q=The%20India%20Restaurant%20%26%20Bar%20Tuakau&output=embed"
+          loading="lazy" allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+    <div class="contact-container">
+      <!-- LEFT : CONTACT INFO -->
+      <div class="contact-info">
+        <div class="contact-overlay">
+          <h4>Pukekohe Branch</h4>
+          <p>
+            130 King Street<br />
+            Pukekohe 2120<br />
+            New Zealand
+          </p>
 
-          <h4>Hours Timings (Tuakau Branch)</h4>
-          <p>Monday : Closed</p>
-          <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
+          <h4>Contact</h4>
+          <p>+64 9 947 8700</p>
 
+          <h4>Hours</h4>
+          <p>
+            Monday : 4:00pm – 9:30pm<br /><br />
+
+            Tuesday & Wednesday :<br />
+            11:30am – 2:00pm, 4:00pm – 9:30pm<br /><br />
+          </p>
+        </div>
+      </div>
+
+      <!-- RIGHT : MAP -->
+      <div class="contact-map">
+        <iframe src="https://www.google.com/maps?q=The%20India%20Restaurant%20and%20Bar%20Pukekohe&output=embed"
+          loading="lazy" allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+    <div class="contact-container">
+      <!-- LEFT : CONTACT INFO -->
+      <div class="contact-info">
+        <div class="contact-overlay">
           <h4>Pokeno Branch</h4>
-          <p>42 McDonald Road Pokeno Auckland 2402</p>
+          <p>
+            42 McDonald Road<br />
+            Pokeno<br />
+            Auckland 2402
+          </p>
+
+          <h4>Contact</h4>
           <p>09 233 6999</p>
 
-          <h4>Hours Timings (Pokeno Branch)</h4>
-          <p>Monday - Sunday : 4:00pm – 10:00pm</p>
+          <h4>Hours</h4>
+          <p>Monday – Sunday : 4:00pm – 10:00pm</p>
         </div>
       </div>
 
-      <div class="footer-bottom">
-      © 2026 DEVELOPED AND DESIGNED BY
-        <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
+      <!-- RIGHT : MAP -->
+      <div class="contact-map">
+        <iframe src="https://www.google.com/maps?q=The%20India%20Restaurant%20and%20Bar%20Pokeno&output=embed"
+          loading="lazy" allowfullscreen>
+        </iframe>
       </div>
-    </footer>
-    <script src="location.js"></script>
-  </body>
+    </div>
+  </section>
+
+  <!-- ================= FOOTER ================= -->
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-about">
+        <a href="index.html">
+          <img src="./Resources/logo.png" alt="The India Restaurant & Bar Logo" />
+        </a>
+        <p>
+          You can order online from us by visiting
+          www.theindiarestaurant.co.nz and we will deliver our delicious food
+          directly to your doorstep.
+        </p>
+
+        <a href="reservation.html" class="footer-btn">BOOK A TABLE</a>
+      </div>
+
+      <div class="footer-contact">
+        <h4>Tuakau Branch</h4>
+        <p>37 B George Street Tuakau Auckland</p>
+        <p>09 233 6999</p>
+
+        <h4>Hours Timings (Tuakau Branch)</h4>
+        <p>Monday : Closed</p>
+        <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
+
+        <h4>Pokeno Branch</h4>
+        <p>42 McDonald Road Pokeno Auckland 2402</p>
+        <p>09 233 6999</p>
+
+        <h4>Hours Timings (Pokeno Branch)</h4>
+        <p>Monday - Sunday : 4:00pm – 10:00pm</p>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2026 DEVELOPED AND DESIGNED BY
+      <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
+    </div>
+  </footer>
+  <script src="location.js"></script>
+</body>
+
 </html>
