--- a/menu.html
+++ b/menu.html
@@ -1,158 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MENU</title>
 
-    <!-- MAIN CSS -->
-    <link rel="stylesheet" href="menu.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MENU</title>
 
-  <body>
-    <!-- HEADER -->
-    <header class="site-header">
-      <nav class="nav-container">
-        <!-- LEFT DESKTOP LINKS -->
-        <ul class="nav-left">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-        </ul>
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="menu.css" />
+</head>
 
-        <!-- LOGO CENTER -->
-        <div class="logo">
-          <a href="index.html">
-            <img
-              src="./Resources/logoo.png"
-              alt="The India Restaurant & Bar Logo"
-            />
-          </a>
-        </div>
+<body>
+  <!-- HEADER -->
+  <header class="site-header">
+    <nav class="nav-container">
+      <!-- LEFT DESKTOP LINKS -->
+      <ul class="nav-left">
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+      </ul>
 
-        <!-- RIGHT DESKTOP LINKS -->
-        <ul class="nav-right">
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-
-        <!-- HAMBURGER (MOBILE) -->
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <!-- MOBILE MENU -->
-        <ul class="mobile-menu">
-          <li><a href="/menu.html">MENU</a></li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <!-- =========================================
-     HERO SECTION
-========================================= -->
-    <section class="hero">
-      <img
-        src="./Resources/bg.jpg"
-        alt="Restaurant Background"
-        class="hero-bg"
-      />
-
-      <div class="hero-overlay"></div>
-
-      <div class="hero-content">
-        <p class="hero-tagline">“One Table · A Whole Journey”</p>
-        <h1 class="hero-title">The India Restaurant & Bar Tuakau and Pokeno</h1>
-        <a href="/reservation.html" class="hero-btn">
-          RESERVATIONS
-          <span class="chili"></span>
+      <!-- LOGO CENTER -->
+      <div class="logo">
+        <a href="index.html">
+          <img src="./Resources/logoo.png" alt="The India Restaurant & Bar Logo" />
         </a>
       </div>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Pacifico&display=swap"
-        rel="stylesheet"
-      />
-    </section>
 
-    <!-- =========================================
+      <!-- RIGHT DESKTOP LINKS -->
+      <ul class="nav-right">
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+
+      <!-- HAMBURGER (MOBILE) -->
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <!-- MOBILE MENU -->
+      <ul class="mobile-menu">
+        <li><a href="/menu.html">MENU</a></li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO SECTION -->
+  <section class="hero">
+
+    <!-- HERO SLIDER -->
+    <div class="hero-slider">
+      <img src="./Resources/slide1.jpg" class="hero-slide active" alt="Restaurant Image 1">
+      <img src="./Resources/slide2.jpg" class="hero-slide" alt="Restaurant Image 2">
+
+      <button class="slider-arrow left" aria-label="Previous slide">&#10094;</button>
+      <button class="slider-arrow right" aria-label="Next slide">&#10095;</button>
+    </div>
+
+    <div class="hero-overlay"></div>
+
+    <div class="hero-content">
+      <p class="hero-tagline">“One Table · A Whole Journey”</p>
+      <h1 class="hero-title">
+        The India Restaurant & Bar Tuakau and Pokeno
+      </h1>
+      <a href="/reservation.html" class="hero-btn">
+        RESERVATIONS
+      </a>
+    </div>
+
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Pacifico&display=swap"
+      rel="stylesheet">
+  </section>
+
+  <!-- =========================================
      MENU PAGE SECTION
 ========================================= -->
-    <section class="menu-page">
-      <h1 class="menu-title">MENU</h1>
+  <section class="menu-page">
+    <h1 class="menu-title">MENU</h1>
 
-      <div class="menu-buttons">
-        <a
-          href="https://www.ordermeal.co.nz/the-india-restaurant-pokeno/"
-          class="menu-location-btn"
-        >
-          View Pokeno Menu
-        </a>
-        <a
-          href="https://www.ordermeal.co.nz/the-india-restaurant-bar-tuakau/"
-          class="menu-location-btn"
-        >
-          View Tuakau Menu
-        </a>
-        <a
-          href="https://www.ordermeal.co.nz/the-india-restaurant-pukekohe/"
-          class="menu-location-btn"
-        >
-          View Pukekohe Menu
-        </a>
-      </div>
-    </section>
+    <div class="menu-buttons">
+      <a href="https://www.ordermeal.co.nz/the-india-restaurant-pokeno/" class="menu-location-btn">
+        View Pokeno Menu
+      </a>
+      <a href="https://www.ordermeal.co.nz/the-india-restaurant-bar-tuakau/" class="menu-location-btn">
+        View Tuakau Menu
+      </a>
+      <a href="https://www.ordermeal.co.nz/the-india-restaurant-pukekohe/" class="menu-location-btn">
+        View Pukekohe Menu
+      </a>
+    </div>
+  </section>
 
-    <!-- =========================================
+  <!-- =========================================
      FOOTER
 ========================================= -->
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-about">
-          <a href="index.html">
-            <img
-              src="./Resources/logo.png"
-              alt="The India Restaurant & Bar Logo"
-            />
-          </a>
-          <p>
-            You can order online from us by visiting
-            www.theindiarestaurant.co.nz and we will deliver our delicious food
-            directly to your doorstep.
-          </p>
-          <a href="reservation.html" class="footer-btn"> BOOK A TABLE </a>
-        </div>
-
-        <div class="footer-contact">
-          <h4>Tuakau Branch</h4>
-          <p>37 B George Street Tuakau Auckland</p>
-          <p>09 233 6999</p>
-
-          <h4>Hours Timings (Tuakau Branch)</h4>
-          <p>Monday : Closed</p>
-          <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
-
-          <h4>Pokeno Branch</h4>
-          <p>42 McDonald Road Pokeno Auckland 2402</p>
-          <p>09 233 6999</p>
-
-          <h4>Hours Timings (Pokeno Branch)</h4>
-          <p>Monday - Sunday : 4:00pm – 10:00pm</p>
-        </div>
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-about">
+        <a href="index.html">
+          <img src="./Resources/logo.png" alt="The India Restaurant & Bar Logo" />
+        </a>
+        <p>
+          You can order online from us by visiting
+          www.theindiarestaurant.co.nz and we will deliver our delicious food
+          directly to your doorstep.
+        </p>
+        <a href="reservation.html" class="footer-btn"> BOOK A TABLE </a>
       </div>
 
-      <div class="footer-bottom">
-       © 2026 DEVELOPED AND DESIGNED BY
-        <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
-      </div>
-    </footer>
+      <div class="footer-contact">
+        <h4>Tuakau Branch</h4>
+        <p>37 B George Street Tuakau Auckland</p>
+        <p>09 233 6999</p>
 
-    <!-- =========================================
+        <h4>Hours Timings (Tuakau Branch)</h4>
+        <p>Monday : Closed</p>
+        <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
+
+        <h4>Pokeno Branch</h4>
+        <p>42 McDonald Road Pokeno Auckland 2402</p>
+        <p>09 233 6999</p>
+
+        <h4>Hours Timings (Pokeno Branch)</h4>
+        <p>Monday - Sunday : 4:00pm – 10:00pm</p>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2026 DEVELOPED AND DESIGNED BY
+      <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
+    </div>
+  </footer>
+
+  <!-- =========================================
      SCRIPT
 ========================================= -->
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
+
 </html>
