--- a/reservation.html
+++ b/reservation.html
@@ -1,183 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reservation | The India Restaurant & Bar</title>
 
-    <link rel="stylesheet" href="reservation.css" />
-  </head>
-  <body>
-    <!-- ==================================================
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reservation | The India Restaurant & Bar</title>
+
+  <link rel="stylesheet" href="reservation.css" />
+</head>
+
+<body>
+  <!-- ==================================================
   HEADER
 ================================================== -->
-    <header class="site-header">
-      <nav class="nav-container">
-        <!-- DESKTOP LEFT -->
-        <ul class="nav-left">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-        </ul>
+  <header class="site-header">
+    <nav class="nav-container">
+      <!-- DESKTOP LEFT -->
+      <ul class="nav-left">
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+      </ul>
 
-        <!-- LOGO -->
-        <div class="logo">
-          <a href="index.html">
-            <img src="./Resources/logoo.png" alt="The India Restaurant & Bar" />
-          </a>
-        </div>
-
-        <!-- DESKTOP RIGHT -->
-        <ul class="nav-right">
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-
-        <!-- HAMBURGER -->
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <!-- HOME DROPDOWN -->
-        <!-- MOBILE DROPDOWN MENU -->
-        <ul class="mobile-menu">
-          <li><a href="/menu.html">MENU</a></li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <!-- ==================================================
-  HERO SECTION
-================================================== -->
-    <section class="hero">
-      <img
-        src="./Resources/bg.jpg"
-        alt="Restaurant Background"
-        class="hero-bg"
-      />
-
-      <div class="hero-overlay"></div>
-
-      <div class="hero-content">
-        <p class="hero-tagline">“One Table · A Whole Journey”</p>
-        <h1 class="hero-title">The India Restaurant & Bar Tuakau and Pokeno</h1>
-        <a href="/reservation.html" class="hero-btn">
-          RESERVATIONS
-          <span class="chili"></span>
+      <!-- LOGO -->
+      <div class="logo">
+        <a href="index.html">
+          <img src="./Resources/logoo.png" alt="The India Restaurant & Bar" />
         </a>
       </div>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Pacifico&display=swap"
-        rel="stylesheet"
-      />
-    </section>
 
-    <!-- ==================================================
+      <!-- DESKTOP RIGHT -->
+      <ul class="nav-right">
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+
+      <!-- HAMBURGER -->
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <!-- HOME DROPDOWN -->
+      <!-- MOBILE DROPDOWN MENU -->
+      <ul class="mobile-menu">
+        <li><a href="/menu.html">MENU</a></li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO SECTION -->
+  <section class="hero">
+
+    <!-- HERO SLIDER -->
+    <div class="hero-slider">
+      <img src="./Resources/slide1.jpg" class="hero-slide active" alt="Restaurant Image 1">
+      <img src="./Resources/slide2.jpg" class="hero-slide" alt="Restaurant Image 2">
+
+      <button class="slider-arrow left" aria-label="Previous slide">&#10094;</button>
+      <button class="slider-arrow right" aria-label="Next slide">&#10095;</button>
+    </div>
+
+    <div class="hero-overlay"></div>
+
+    <div class="hero-content">
+      <p class="hero-tagline">“One Table · A Whole Journey”</p>
+      <h1 class="hero-title">
+        The India Restaurant & Bar Tuakau and Pokeno
+      </h1>
+      <a href="/reservation.html" class="hero-btn">
+        RESERVATIONS
+      </a>
+    </div>
+
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Pacifico&display=swap"
+      rel="stylesheet">
+  </section>
+
+  <!-- ==================================================
   RESERVATION SECTION
 ================================================== -->
-    <section class="reservation-section">
-      <h2 class="section-title">MAKE A RESERVATION</h2>
+  <section class="reservation-section">
+    <h2 class="section-title">MAKE A RESERVATION</h2>
 
-      <div class="reservation-wrapper">
-        <form class="reservation-card">
-          <h3>The India Restaurant – Tuakau</h3>
-          <input type="text" placeholder="Your Name" required />
-          <input type="tel" placeholder="Phone Number" required />
-          <input type="datetime-local" required />
-          <select required>
-            <option value="">Number of Guests</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5+</option>
-          </select>
-          <button type="submit">Reserve Table</button>
-        </form>
+    <div class="reservation-wrapper">
+      <form class="reservation-card">
+        <h3>The India Restaurant – Tuakau</h3>
+        <input type="text" placeholder="Your Name" required />
+        <input type="tel" placeholder="Phone Number" required />
+        <input type="datetime-local" required />
+        <select required>
+          <option value="">Number of Guests</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5+</option>
+        </select>
+        <button type="submit">Reserve Table</button>
+      </form>
 
-        <form class="reservation-card">
-          <h3>The India Restaurant – Pokeno</h3>
-          <input type="text" placeholder="Your Name" required />
-          <input type="tel" placeholder="Phone Number" required />
-          <input type="datetime-local" required />
-          <select required>
-            <option value="">Number of Guests</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5+</option>
-          </select>
-          <button type="submit">Reserve Table</button>
-        </form>
+      <form class="reservation-card">
+        <h3>The India Restaurant – Pokeno</h3>
+        <input type="text" placeholder="Your Name" required />
+        <input type="tel" placeholder="Phone Number" required />
+        <input type="datetime-local" required />
+        <select required>
+          <option value="">Number of Guests</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5+</option>
+        </select>
+        <button type="submit">Reserve Table</button>
+      </form>
 
-        <form class="reservation-card">
-          <h3>The India Restaurant – Auckland</h3>
-          <input type="text" placeholder="Your Name" required />
-          <input type="tel" placeholder="Phone Number" required />
-          <input type="datetime-local" required />
-          <select required>
-            <option value="">Number of Guests</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5+</option>
-          </select>
-          <button type="submit">Reserve Table</button>
-        </form>
-      </div>
-    </section>
+      <form class="reservation-card">
+        <h3>The India Restaurant – Auckland</h3>
+        <input type="text" placeholder="Your Name" required />
+        <input type="tel" placeholder="Phone Number" required />
+        <input type="datetime-local" required />
+        <select required>
+          <option value="">Number of Guests</option>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5+</option>
+        </select>
+        <button type="submit">Reserve Table</button>
+      </form>
+    </div>
+  </section>
 
-    <!-- ==================================================
+  <!-- ==================================================
   FOOTER
 ================================================== -->
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-about">
-          <a href="index.html">
-            <img
-              src="./Resources/logo.png"
-              alt="The India Restaurant & Bar Logo"
-            />
-          </a>
-          <p>
-            You can order online from us by visiting
-            www.theindiarestaurant.co.nz and we will deliver our delicious food
-            directly to your doorstep.
-          </p>
-          
-          <a href="menu.html" class="footer-btn">ORDER ONLINE</a>
-        </div>
+  <footer class="footer">
+    <div class="footer-container">
+      <div class="footer-about">
+        <a href="index.html">
+          <img src="./Resources/logo.png" alt="The India Restaurant & Bar Logo" />
+        </a>
+        <p>
+          You can order online from us by visiting
+          www.theindiarestaurant.co.nz and we will deliver our delicious food
+          directly to your doorstep.
+        </p>
 
-        <div class="footer-contact">
-          <h4>Tuakau Branch</h4>
-          <p>37 B George Street Tuakau Auckland</p>
-          <p>09 233 6999</p>
-
-          <h4>Hours Timings (Tuakau Branch)</h4>
-          <p>Monday : Closed</p>
-          <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
-
-          <h4>Pokeno Branch</h4>
-          <p>42 McDonald Road Pokeno Auckland 2402</p>
-          <p>09 233 6999</p>
-
-          <h4>Hours Timings (Pokeno Branch)</h4>
-          <p>Monday - Sunday : 4:00pm – 10:00pm</p>
-        </div>
+        <a href="menu.html" class="footer-btn">ORDER ONLINE</a>
       </div>
 
-      <div class="footer-bottom">
-        © 2026 DEVELOPED AND DESIGNED BY
-        <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
-      </div>
-    </footer>
+      <div class="footer-contact">
+        <h4>Tuakau Branch</h4>
+        <p>37 B George Street Tuakau Auckland</p>
+        <p>09 233 6999</p>
 
-    <script src="reservation.js"></script>
-  </body>
+        <h4>Hours Timings (Tuakau Branch)</h4>
+        <p>Monday : Closed</p>
+        <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
+
+        <h4>Pokeno Branch</h4>
+        <p>42 McDonald Road Pokeno Auckland 2402</p>
+        <p>09 233 6999</p>
+
+        <h4>Hours Timings (Pokeno Branch)</h4>
+        <p>Monday - Sunday : 4:00pm – 10:00pm</p>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2026 DEVELOPED AND DESIGNED BY
+      <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
+    </div>
+  </footer>
+
+  <script src="reservation.js"></script>
+</body>
+
 </html>
