--- a/contact.html
+++ b/contact.html
@@ -183,48 +183,44 @@
       </div>
     </section>
 
-    <!-- ================= FOOTER ================= -->
-    <footer class="footer">
-      <div class="footer-container">
-        <div class="footer-about">
-          <a href="index.html">
-            <img
-              src="./Resources/logo.png"
-              alt="The India Restaurant & Bar Logo"
-            />
-          </a>
-          <p>
-            You can order online from us by visiting
-            www.theindiarestaurant.co.nz and we will deliver our delicious food
-            directly to your doorstep.
-          </p>
+  <footer class="footer">
+    <div class="footer-container">
 
-          <a href="reservation.html" class="footer-btn">BOOK A TABLE</a>
-        </div>
+      <div class="footer-contact">
+        <h2>CONTACT</h2>
+        <h4>Tuakau Branch</h4>
+        <p>09 233 6999</p>
 
-        <div class="footer-contact">
-          <h4>Tuakau Branch</h4>
-          <p>37 B George Street Tuakau Auckland</p>
-          <p>09 233 6999</p>
+        <h4>Pokeno Branch</h4>
+        <p>09 233 6999</p>
 
-          <h4>Hours Timings (Tuakau Branch)</h4>
-          <p>Monday : Closed</p>
-          <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
-
-          <h4>Pokeno Branch</h4>
-          <p>42 McDonald Road Pokeno Auckland 2402</p>
-          <p>09 233 6999</p>
-
-          <h4>Hours Timings (Pokeno Branch)</h4>
-          <p>Monday - Sunday : 4:00pm – 10:00pm</p>
-        </div>
       </div>
+      <div class="footer-contact">
+        <h2>ADDRESS</h2>
+        <h4>Tuakau Branch</h4>
+        <p>37 B George Street Tuakau Auckland</p>
+        <h4>Pokeno Branch</h4>
+        <p>42 McDonald Road Pokeno Auckland 2402</p>
 
-      <div class="footer-bottom">
-        © 2026 DEVELOPED AND DESIGNED BY
-        <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
       </div>
-    </footer>
+      <div class="footer-contact">
+        <h2>OPENING HOURS</h2>
+        <h4>Tuakau Branch</h4>
+
+        <h4>Hours Timings (Tuakau Branch)</h4>
+        <p>Monday : Closed</p>
+        <p>Tuesday - Sunday : 11:30am – 2:00pm · 4:00pm – 10:00pm</p>
+
+        <h4>Pokeno Branch</h4>
+        <h4>Hours Timings (Pokeno Branch)</h4>
+        <p>Monday - Sunday : 4:00pm – 10:00pm</p>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © 2026 DEVELOPED AND DESIGNED BY <a href="https://www.ordermeal.co.nz/">ORDERMEAL</a>
+    </div>
+  </footer>
     <!-- NAV SCRIPT -->
     <script src="contact.js"></script>
   </body>
