Fix mobile navbar alignment on contact and location pages

--- a/contact.html
+++ b/contact.html
@@ -7,56 +7,46 @@
     <title>CONTACT</title>
   </head>
   <body>
-    <!-- ================= HEADER ================= -->
-    <header class="site-header">
-      <nav class="nav-container">
-        <!-- LEFT NAV (DESKTOP) -->
-        <ul class="nav-left">
-          <li class="nav-dropdown">
-            <a href="#">HOME</a>
-            <ul class="dropdown-menu">
-              <li><a href="index.html">MAIN HOME</a></li>
-              <li><a href="menu.html">MENU</a></li>
-            </ul>
-          </li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-        </ul>
+  <!-- HEADER -->
+  <header class="site-header">
+    <nav class="nav-container">
 
-        <!-- LOGO -->
-        <div class="logo">
-          <a href="index.html">
-            <img src="./Resources/logoo.png" alt="The India Restaurant & Bar" />
-          </a>
-        </div>
+      <!-- LEFT LINKS (Desktop) -->
+      <ul class="nav-left">
+        <li><a href="/menu.html">MENU</a></li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+      </ul>
 
-        <!-- RIGHT NAV (DESKTOP) -->
-        <ul class="nav-right">
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
+      <!-- LOGO -->
+      <div class="logo">
+        <a href="index.html">
+          <img src="./Resources/logoo.png" alt="The India Restaurant & Bar" />
+        </a>
+      </div>
 
-        <!-- HAMBURGER -->
-        <div class="hamburger" id="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+      <!-- RIGHT LINKS (Desktop) -->
+      <ul class="nav-right">
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
 
-        <!-- MOBILE MENU -->
-        <ul class="mobile-menu" id="mobileMenu">
-          <li class="mobile-dropdown">
-            <a href="#" class="mobile-home">HOME</a>
-            <ul class="mobile-submenu">
-              <li><a href="index.html">MAIN HOME</a></li>
-              <li><a href="menu.html">MENU</a></li>
-            </ul>
-          </li>
-          <li><a href="reservation.html">RESERVATION</a></li>
-          <li><a href="location.html">LOCATION</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-      </nav>
-    </header>
+      <!-- HAMBURGER (Mobile) -->
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <!-- MOBILE DROPDOWN MENU -->
+      <ul class="mobile-menu">
+        <li><a href="/menu.html">MENU</a></li>
+        <li><a href="reservation.html">RESERVATION</a></li>
+        <li><a href="location.html">LOCATION</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+
+    </nav>
+  </header>
 
     <!-- HERO SECTION -->
     <section class="hero">
