--- a/reservation.html
+++ b/reservation.html
@@ -44,7 +44,7 @@
       <!-- HOME DROPDOWN -->
       <!-- MOBILE DROPDOWN MENU -->
       <ul class="mobile-menu">
-        <li><a href="/menu.html">MENU</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="reservation.html">RESERVATION</a></li>
         <li><a href="location.html">LOCATION</a></li>
         <li><a href="contact.html">CONTACT</a></li>
